# mobility-book-graphic-style-guide

./: .gitignore  BLACK_AND_WHITE_INSTALL.md  DESIGN_TOKENS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MIGRATION.md  README.md  README_NEW.md  REFACTOR_SUMMARY.md  THEME_VISUALIZATION.md  THEME_VISUALIZATION_GUIDE.md  TROUBLESHOOTING.md  UPDATING.md  Urban Institute.xml  VERIFICATION_CHECKLIST.md  book_mobility_swatches.ase  index.html  mobility_book_colors.ase  pyproject.toml  requirements.txt  test_colors_debug.py
builders/: altair_builder.py
builders__D/: __init__.py  matplotlib_builder.py
colors/: alias_colors.py
colors__D/: alias.json  alias_colors.py
css/: theme.css
design_tokens/: __init__.py  bozza_design_tokens.json  bozza_token_map.json  design_tokens.json  design_tokens.py
design_tokens__D/: design_tokens.json
docs/: theme-visualization.html
docs/css/: bootstrap.css  bootstrap.min.css  color-column.css  graphics.css
examples/: check_env.ipynb  check_env.py  demo_advanced.ipynb  demo_heatmap.ipynb  demo_new_api.ipynb  helper.ipynb  test_altair_title.ipynb  test_font_injection.ipynb
examples/outputs/: mobility_book_swatches.ase
mobility_book_style/: __init__.py  _colors.py  _fonts.py  _tokens.py  altair.py  export.py  matplotlib.py  theme.py  theme_visualizer.py  utils.py
mobility_book_style.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mobility_book_style/data/: design_tokens.json
mobility_book_style/fonts/: README.md
scripts/: generate_theme_visualization.py
tests/: __init__.py  test_altair.py  test_export.py  test_fonts.py  test_matplotlib.py  test_tokens.py
themes/: __init__.py
themes__D/: altair_mobility_theme.py  make_ase_from_tokens.py  mpl_mobility_style.mplstyle
