[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobility-book-style"
version = "0.1.0"
description = "Graphic style guide for Mobility Book visualizations"
authors = [
    {name = "Daniele Fadda", email = "daniele.fadda@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["visualization", "matplotlib", "altair", "style-guide", "design-system"]

dependencies = [
    "matplotlib>=3.9",
]

[project.optional-dependencies]
altair = [
    "altair>=5.4",
]
all = [
    "altair>=5.4",
    "vega_datasets>=0.9",
]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "jupyter>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/danielefadda/mobility-book-graphic-style-guide"
Repository = "https://github.com/danielefadda/mobility-book-graphic-style-guide"
Documentation = "https://github.com/danielefadda/mobility-book-graphic-style-guide#readme"

[tool.setuptools]
packages = ["mobility_book_style"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
